argocd-declarative/manifests/gitea-app/gitea-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-deployment
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      name: gitea
      labels:
        app: gitea
    spec:
      containers:
        # Note: add a init container to add following to gitea\conf\app.ini
        #[webhook]
        #ALLOWED_HOST_LIST = *
        #SKIP_TLS_VERIFY = true
        - name: gitea
#          image: gitea/gitea:1.21.11
          image: gitea/gitea:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 22
              protocol: TCP
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: gitea-vol
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: gitea-vol
          persistentVolumeClaim:
#            claimName: gitea-pvc-local
            claimName: gitea-pvc-nfs-sc
#        - name: gitea-vol
#          configMap:
#            name: log-config
#            items:
#              - key: log_level
#                path: log_level
