argocd-declarative/manifests/gitea-app/gitea-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea-svc
spec:
  selector:
    app: gitea
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
#      nodePort: 32001
#  type: NodePort
  type: ClusterIP
