argocd-declarative/manifests/gitea-app/gitea-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  annotations:
#    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/add-base-url: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "2500m"
spec:
  ingressClassName: nginx
  rules:
    - host: gitea.int.taqniat.ae
      http:
        paths:
          - path: /
#           - path: /api
#          - path: /streaming/(.*)
#          - path: /gitea(/|$)(.*)
#          - path: /gitea
#          - path: /(.*)
#          - path: /gitea(/|$)(.*)
            pathType: Prefix
#            pathType: ImplementationSpecific
#            pathType: Exact
            backend:
              service:
                name: gitea-svc
                port:
                  number: 3000
